# lox-vm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: for-syntax.lox
src/: chunk.rs  compiler.rs  emmitable.rs  function.rs  main.rs  opcode.rs  scanner.rs  token.rs  tokenizer.rs  value.rs  vm.rs
