[package]
name = "lox-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nom = "7.1.3"
thiserror = "1.0.58"

[dev-dependencies]
rstest = "0.18.2"


[features]
debug_trace_execution = []
